--- a/землю-крестьянам.md
+++ b/землю-крестьянам.md
@@ -3,7 +3,7 @@
 * Снежная Королева (армия)
 * Фонд президента (студенты и рабочие)
 * Фонд патриарха (малоимущие)
-* Муниципалитет (народ)
+* Муниципалитет (местный царь)
 * Юридические лица
 * Физические лица
 
